After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 753009 - rtspsrc: Strip keys from the fmtp that we use internally in our caps
rtspsrc: Strip keys from the fmtp that we use internally in our caps
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
unspecified
Other All
: Normal normal
: 1.5.90
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-07-29 10:27 UTC by Sebastian Dröge (slomo)
Modified: 2015-08-16 13:41 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtspsrc: Strip keys from the fmtp that we use internally in our caps (2.09 KB, patch)
2015-07-29 10:27 UTC, Sebastian Dröge (slomo)
committed Details | Review
sdpdemux: Strip keys from the fmtp that we use internally in our caps (2.26 KB, patch)
2015-07-29 10:28 UTC, Sebastian Dröge (slomo)
committed Details | Review
rtsp-media: Strip keys from the fmtp that we use internally in our caps (2.10 KB, patch)
2015-07-29 10:28 UTC, Sebastian Dröge (slomo)
committed Details | Review
check correct array index (1.08 KB, patch)
2015-07-30 06:35 UTC, Vineeth
committed Details | Review
check correct array index (1.08 KB, patch)
2015-07-30 06:36 UTC, Vineeth
committed Details | Review
check correct array index (1.11 KB, patch)
2015-07-30 06:36 UTC, Vineeth
committed Details | Review

Description Sebastian Dröge (slomo) 2015-07-29 10:27:47 UTC
See commit message
Comment 1 Sebastian Dröge (slomo) 2015-07-29 10:27:51 UTC
Created attachment 308369 [details] [review]
rtspsrc: Strip keys from the fmtp that we use internally in our caps

Skip keys from the fmtp, which we already use ourselves for the
caps. Some software is adding random things like clock-rate into
the fmtp, and we would otherwise here set a string-typed clock-rate
in the caps... and thus fail to create valid RTP caps
Comment 2 Sebastian Dröge (slomo) 2015-07-29 10:28:18 UTC
Created attachment 308370 [details] [review]
sdpdemux: Strip keys from the fmtp that we use internally in our caps

Skip keys from the fmtp, which we already use ourselves for the
caps. Some software is adding random things like clock-rate into
the fmtp, and we would otherwise here set a string-typed clock-rate
in the caps... and thus fail to create valid RTP caps
Comment 3 Sebastian Dröge (slomo) 2015-07-29 10:28:26 UTC
Created attachment 308371 [details] [review]
rtsp-media: Strip keys from the fmtp that we use internally in our caps

Skip keys from the fmtp, which we already use ourselves for the
caps. Some software is adding random things like clock-rate into
the fmtp, and we would otherwise here set a string-typed clock-rate
in the caps... and thus fail to create valid RTP caps
Comment 4 Sebastian Dröge (slomo) 2015-07-29 10:30:54 UTC
And for all this copy & paste nightmare... bug #745880
Comment 5 Vineeth 2015-07-30 06:35:37 UTC
Created attachment 308434 [details] [review]
check correct array index

There is a small mistake while checking for array index, leading to assertion error.
Comment 6 Vineeth 2015-07-30 06:36:00 UTC
Created attachment 308435 [details] [review]
check correct array index
Comment 7 Vineeth 2015-07-30 06:36:17 UTC
Created attachment 308436 [details] [review]
check correct array index